[package]
name = "quadlet-rs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
dirs = "5.0"
ordered-multimap = "0.7"
thiserror = "1.0.56"
users = { version = "0.11", default_features = false }  # otherwise pulls in `log`
walkdir = "2"

# optimize with tips from https://github.com/johnthagen/min-sized-rust
[profile.release]
# unpotimized file size with rustc 1.76.0: 1.1M
strip = true  # no changes to binary size
lto = "fat"  # reduces binary size from 1.1M to 890K
opt-level = "z"  # reduces binary size from 890K to 797K
panic = "abort"  # reduces binary size from 797K to 741K
codegen-units = 1  # reduces binary size from 741K to 729K

[profile.dev]
split-debuginfo = "unpacked"
