[package]
name = "quadlet-rs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
dirs = "5.0"
log = { version = "0.4.22", features = ['std'] }
ordered-multimap = "0.7"
regex-lite = "0.1.6"
thiserror = "1.0.56"
users = "0.11"
walkdir = "2"

[dev-dependencies]
serial_test = { version = "*", default_features = false, features = [
  "log",
  "logging",
] } # ignore `async` and `futures`
tempfile = "3.12.0"

# optimize with tips from https://github.com/johnthagen/min-sized-rust
[profile.release]
# unpotimized file size with rustc 1.76.0: 1.1M
strip = true      # no changes to binary size
lto = "fat"
panic = "abort"
codegen-units = 1
opt-level = "s"
inline-threshold = 7  # adapted from "Tighten Rust's Belt, Ayers et al., 2022"

[profile.dev]
split-debuginfo = "unpacked"
