[package]
name = "quadlet-rs"
version = "0.3.0"
authors = ["Riyad Preukschas <riyad@informatik.uni-bremen.de>"]
edition = "2024"
description = "A Systemd generator that converts Podman Quadlet files to Systemd units"
readme = "README.md"
repository = "https://github.com/riyad/quadlet-rs"
license = "MPL-2.0"
keywords = ["containers", "podman", "quadlet", "systemd"]
categories = ["command-line-utilities", "config", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
log = []

[dependencies]
csv = { version = "1.3", default-features = false }
dirs = { version = "6.0", default-features = false }
ere = "0.2.4"
log = { version = "0.4.22", features = ['std'] }
ordered-multimap = "0.7"
thiserror = { version = "2.0.1", default-features = false }
users = { version = "0.11", default-features = false }
walkdir = { version = "2", default-features = false }

[dev-dependencies]
serial_test = { version = "*", default-features = false, features = [
  "logging",
] } # ignore `async` and `futures`
tempfile = { version = "3.12.0", default-features = false }

# optimize with tips from https://github.com/johnthagen/min-sized-rust
[profile.release]
# unpotimized file size with Rust 1.92.0: 1.1M
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
opt-level = "s"
# file size with all these options: 748K

[profile.dev]
split-debuginfo = "unpacked"
